@@ -1,3 +1,8 @@
+Metatag 8.x-1.8, 2019-02-20
+---------------------------
+By samuel.mortenson, Berdir, DamienMcKenna: Fix data property definition.
+
+
 Metatag 8.x-1.7, 2018-08-31
 ---------------------------
 #2994979 by DamienMcKenna, dspachos, ynotpeanutbutter, oxy86, IT-Cru, kdeds,
